--- a/2048-solver/src/main/resources/fxml/Board.fxml
+++ b/2048-solver/src/main/resources/fxml/Board.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -7,21 +9,53 @@
 
 <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: rgb(187,173,161);" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.ntnu.it3105.Controller">
    <children>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="400.0" AnchorPane.bottomAnchor="400.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane prefHeight="107.0" prefWidth="400.0">
          <children>
-            <Label alignment="CENTER" prefHeight="62.0" prefWidth="207.0" text="SCORE:" textFill="WHITE">
-               <font>
-                  <Font name="Helvetica Neue Bold" size="50.0" />
-               </font>
-            </Label>
-            <Label fx:id="scoreLabel" alignment="CENTER" prefHeight="63.0" prefWidth="146.0" text="3400" textAlignment="RIGHT" textFill="#f58181">
-               <font>
-                  <Font size="50.0" />
-               </font>
-            </Label>
+            <GridPane prefHeight="99.0" prefWidth="400.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="10.0" prefWidth="169.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="225.0" minWidth="10.0" prefWidth="201.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label prefHeight="62.0" prefWidth="184.0" text="SCORE:" textFill="WHITE">
+                     <font>
+                        <Font name="Helvetica Neue Bold" size="40.0" />
+                     </font>
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                     <children>
+                        <Label prefHeight="62.0" prefWidth="184.0" text="BEST:" textFill="WHITE">
+                           <font>
+                              <Font name="Helvetica Neue Bold" size="40.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <Label fx:id="scoreLabel" alignment="CENTER_RIGHT" prefHeight="56.0" prefWidth="226.0" text="3400" textAlignment="RIGHT" textFill="#ea7575" GridPane.columnIndex="1">
+                     <font>
+                        <Font size="45.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="bestLabel" alignment="CENTER_RIGHT" prefHeight="56.0" prefWidth="235.0" text="0" textAlignment="RIGHT" textFill="#ea7575" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="45.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="15.0" right="15.0" />
+               </padding>
+            </GridPane>
          </children>
-      </HBox>
-      <GridPane fx:id="grid" gridLinesVisible="true" hgap="5.0" layoutY="100.0" opacity="0.5" prefHeight="401.0" prefWidth="400.0" style="-fx-background-color: rgb(145, 126, 112);" vgap="5.0">
+      </Pane>
+      <GridPane fx:id="grid" hgap="5.0" layoutY="100.0" opacity="0.5" prefHeight="401.0" prefWidth="400.0" style="-fx-background-color: rgb(145, 126, 112);" vgap="5.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
