Working version, made 4096

--- a/2048-solver/src/main/resources/css/stylesheet.css
+++ b/2048-solver/src/main/resources/css/stylesheet.css
@@ -63,3 +63,7 @@
     -fx-background-color: #edc22e;
     -fx-font-size: 35;
 }
+.tile-color-4096 {
+    -fx-background-color: mediumorchid;
+    -fx-font-size: 35;
+}
